Fixed popover z-index

--- a/app/styles/tink/_variables.scss
+++ b/app/styles/tink/_variables.scss
@@ -369,7 +369,7 @@ $dropdown-header-color:          $gray-light !default;
  * Complete layer list (for reference, add these to $layers only if needed)
  * $layers: base, navbar, dropdown, tooltip, navbar-sticky, navbar-fixed, modal-background, modal, popover;
  */
-$layers: base, pseudo, popover, nav-aside, nav-top !default;
+$layers: base, pseudo, nav-aside, popover, nav-top !default;
 
 
 
